--- a/personal.htm
+++ b/personal.htm
@@ -37,32 +37,45 @@ h3
 <p style="line-height: 150%" align="justify">
 <span lang="EN-US" style="font-family: Times New Roman; font-weight: normal">
 <font size="4">
-&nbsp;&nbsp;&nbsp; Guoying Zhao is currently an Academy Professor with Academy 
-Finland and </font></span>
-<span style="font-family: Times New Roman; font-weight: normal"><font size="4">with the Center for Machine Vision and Signal Analysis 
-(CMVS), University of Oulu, 
-Finland. She has been a full </font></span>
-<span lang="EN-US" style="font-family: Times New Roman; font-weight: normal">
-<font size="4">
-p</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">rofessor 
+&nbsp;&nbsp;&nbsp; Guoying Zhao is currently an </span>
+<span lang="EN-US" style="font-family: Times New Roman; font-weight: 700">
+Academy Professor</span><span lang="EN-US" style="font-family: Times New Roman; font-weight: normal">
+with Academy Finland and </span>
+</font><font size="4">
+<span style="font-family: Times New Roman; font-weight: normal">with the Center for Machine Vision and Signal Analysis 
+(CMVS), University of Oulu, Finland. She has been a </span>
+<span style="font-family: Times New Roman; font-weight: 700">full professor</span><span style="font-family: Times New Roman; font-weight: normal"> 
 (tenured, from 2017) with CMVS, where she was a senior researcher (2005-2007), Academy postdoctoral 
-researcher (2008-2011), Academy research fellow (2011-2017) and Associate 
+researcher (2008-2011), </span>
+<span style="font-family: Times New Roman; font-weight: 700">Academy research fellow</span><span style="font-family: Times New Roman; font-weight: normal"> (2011-2017) and Associate 
 Professor (tenure track, 2014-2017). She received the Ph.D. degree in computer science from the 
 Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
 She got the Academy Postdoctoral position in 2007, </span>was selected in 2011 
-to the highly competitive Academy Research Fellow position, and in 2020, she was 
-selected to Prestigious Academy Professor position. She has 
-authored or co-authored more than <span lang="en-us">27</span>0 papers in journals and conferences, and 
+to the highly competitive Academy Research Fellow position, in 2020 selected to Prestigious Academy Professor position, 
+and in 2022 elected to a </span>
+<span style="font-family: Times New Roman; font-weight: 700">member </span>
+<font face="Times New Roman"><b>of Finnish Academy of Sciences and Letter</b>s</font><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
+authored or co-authored more than <span lang="en-us">28</span>0 papers in journals and conferences, and 
 has served </span> </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 1<span lang="en-us">77</span>00 citations in Google Scholar 
-(h-index 64). She was Co-Program chair of ACM International Conference on Multimodal 
-Interaction 2021 (ICMI), and Special 
-Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
-Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
-for FG 2018, has served as area chairs for several conferences and is associate 
-editor for Pattern Recognition, IEEE Transactions on Circuits and Systems for 
-Video Technology, and Image and Vision Computing Journals.</font></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 115%; font-family: Arial,sans-serif">
+currently over 1<span lang="en-us">88</span>00 citations in Google Scholar 
+(h-index 65). She is special sessions/panels chair for FG 2023 and </span><b>
+<span style="font-family: Times New Roman">general chair</span></b><span style="font-family: Times New Roman"> 
+of &nbsp;2022 International Conference on Image Processing and Media Computing (ICIPMC 
+2022). She </span>
+<span style="font-family: Times New Roman; font-weight: normal">was </span>
+<span style="font-family: Times New Roman; font-weight: 700">co-program chair</span><span style="font-family: Times New Roman; font-weight: normal"> of ACM International Conference on Multimodal 
+Interaction 2021 (ICMI), </span>
+<span style="font-family: Times New Roman; font-weight: 700">general chair</span><span style="font-family: Times New Roman; font-weight: normal"> for ICBEA (2019, 2020), </span>
+<span style="font-family: Times New Roman; font-weight: 700">co-chair for Late Breaking 
+Results</span><span style="font-family: Times New Roman; font-weight: normal"> of ICMI 
+2019, </span><span style="font-family: Times New Roman; font-weight: 700">
+co-publicity chair</span><span style="font-family: Times New Roman; font-weight: normal"> 
+for FG 2018, has served as area chairs for several conferences and is </span>
+<span style="font-family: Times New Roman; font-weight: 700">associate 
+editor</span><span style="font-family: Times New Roman; font-weight: normal"> for Pattern Recognition, 
+IEEE Trans. on Multimedia, IEEE Transactions on Circuits and Systems for 
+Video Technology, and Image and Vision Computing Journals.</span></font><span lang="EN-US" style="font-size: 12.0pt; line-height: 115%; font-family: Arial,sans-serif">
 </span><span style="font-family: Times New Roman; font-weight: normal">
 <font size="4">She has lectured tutorials at <span lang="en-us">FG 2018, </span>ICPR 2006, ICCV 2009, 
 and SCIA 2013, and authored/edited three books and <span lang="en-us">nine</span> special issues in 
@@ -76,8 +89,11 @@ Scholarsh</font></span><font size="4"><span style="font-family: Times New Roman;
 Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">uno T&ouml;nning Research funding<span lang="en-us">, 
 Kauta Foundation grant</span> 
 and Jorma Ollila grant. </font> </span><font size="4">
-<span style="font-family: Times New Roman; font-weight: normal">She is IEEE 
-Fellow, IAPR Fellow and AAIA Fellow. Her current research interests include image and video 
+<span style="font-family: Times New Roman; font-weight: normal">She is </span>
+<span style="font-family: Times New Roman; font-weight: 700">IEEE 
+Fellow</span><span style="font-family: Times New Roman; font-weight: normal">, </span>
+<span style="font-family: Times New Roman; font-weight: 700">IAPR Fellow</span><span style="font-family: Times New Roman; font-weight: normal"> and </span>
+<span style="font-family: Times New Roman; font-weight: 700">AAIA Fellow</span><span style="font-family: Times New Roman; font-weight: normal">. Her current research interests include image and video 
 descriptors, gait analysis, dynamic-texture recognition, facial-expression 
 recognition, human motion analysis, and person identification. Her research has 
 been reported by Finnish TV programs, newspapers and MIT Technology Review. </span></font></p>
