--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -160,7 +160,11 @@ ul
 AWARDS</span></b></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
-<font size="4">-- </font></span><font size="4">
+<font size="4">-- </font></span><font size="4"><b><font face="Times New Roman">
+<u>Member of 
+Finnish Academy of Sciences and Letters, 2022-</u></font></b></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- </span>
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
 IEEE Fellow (for contributions to facial expression analysis and feature 
 representation), 2022-.</span></font></p>
@@ -178,6 +182,12 @@ Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), 2021-.</span>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
 <font size="4">-- IAPR Fellow, 2020- (For contributions to video analysis and 
 affective computing).</font></span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- 2022 International 
+Society for Magnetic Resonance in Medicine (ISMRM, best conference for MRI) 
+Magna Cum Laude Merit Award (top 5%), for the work ¡°Wei Peng, Li Feng, Guoying 
+Zhao, and Fang Liu. Learning Optimal K-space Acquisition and Reconstruction 
+using Physics-Informed Neural Networks¡±.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
