--- a/main_experience.htm
+++ b/main_experience.htm
@@ -45,6 +45,11 @@ Position:</font></b></p>
 	Professor (Tenured) in Computer Science and Engineering, University of Oulu.</font></p>
 	</li>
 	<li>
+	<p style="text-align: left; margin-bottom:0cm; line-height:150%">
+	<font size="4">2022.06 -, Visiting Professor, Department of Computer 
+	Science, Aalto University. </font></p>
+	</li>
+	<li>
 	<p style="text-align: left; margin-bottom:0.5cm; line-height:150%"><font size="4">2010.09 -,
 	</font>
 	<span lang="zh-cn"><font size="4">Adjunct Professor 
