--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -176,6 +176,13 @@ chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</sp
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><span style="font-family: Times New Roman">Special 
 Sessions/Panels Chairs for FG 2023</span></u></b></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4"><b><span style="font-family: Times New Roman">-- <u>General Chair 
+for Arctic AI days 2022</u></span></b></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<span style="font-family: Times New Roman"><b><font size="4">-- <u>Publicity 
+chair</u></font></b></span><font size="4"><span style="font-family: Times New Roman"> 
+of 22nd Scandinavian Conference on Image Analysis (SCIA 2023), Levi, Finland.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; line-height:200%">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
