--- a/teammembers.htm
+++ b/teammembers.htm
@@ -34,7 +34,7 @@ p
 		<p align="left" style="text-align: center">
 		<img border="0" src="Kevin.jpg" width="149" height="148"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Mohammad.jpg" width="145" height="150"></td>
+		<img border="0" src="Jukka.png" width="112" height="148"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
 		<td height="0" align="center" valign="top" width="225">
@@ -46,7 +46,7 @@ p
 		<td width="222" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Dr. Kevin CHENG</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Dr. Mohammad SABOKROU</b></font></td>
+		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
 		<td height="0" align="center" valign="top" width="209">
 		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
 		<td height="0" align="center" valign="top" width="225">
@@ -56,11 +56,11 @@ p
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="222">
-		<img border="0" src="Jukka.png" width="112" height="148"></td>
-		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Yang.jpg" width="148" height="147"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
+		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
@@ -68,11 +68,12 @@ p
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="222">
-		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
-		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<span lang="zh-cn"><b><font face="Times New Roman">Dr</font></b></span><b><font face="Times New Roman">. Haoyu CHEN</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
+		<b>
+		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
@@ -86,107 +87,102 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Muzammil.jpg"></td>
+		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Haoyu.jpg"></td>
+		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Yante.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Tuomas.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Muzammil BEHZAD</font></b></td>
+		<font face="Times New Roman">Mr. Henglin SHI</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Haoyu CHEN</font></b></td>
+		<font face="Times New Roman">Mr. Khanh TRAN-THUONG</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Ms. Yante LI</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Abdelrahman MOSTAFA</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
+		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Wei.jpg"></td>
+		<img border="0" src="Atif.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Marko.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Atif.jpg"></td>
+		<img border="0" src="Hui.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Wei PENG</font></b></td>
+		<font face="Times New Roman">Mr. Atif SHAH</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Atif SHAH</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b><font face="Times New Roman">M<span lang="zh-cn">s</span>. Hui ZHANG</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Henglin SHI</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
+		&nbsp;</td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Tuomas.jpg"></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Zitong.jpg"></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
-		　<img border="0" src="Hui.jpg"></td>
+		　</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
-		<font face="Times New Roman">Mr. Khanh TRAN-THUONG</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
 		<td width="226" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
-		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
 		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
-		<font face="Times New Roman">Mr. Zitong YU</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　<b><font face="Times New Roman">M<span lang="zh-cn">s</span>. Hui ZHANG</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="1112" height="0" align="center" valign="top" colspan="5">
 		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman" size="4"><b><u>Master students</u></b></font></td>
-	</tr>
-	<tr>
-		<td width="223" height="0" align="center" valign="top">
-		<img title="Yar Zar Moe Myint" src="https://media-exp1.licdn.com/dms/image/C5103AQFOPkE3dIIUzQ/profile-displayphoto-shrink_400_400/0/1548060680026?e=1648080000&v=beta&t=6m4bkv6f7LIVLoTd8Uevd6fkBfy0y12HLWq_zKOWyQc" alt="Yar Zar Moe Myint" id="ember35" class="pv-top-card-profile-picture__image pv-top-card-profile-picture__image--show ember-view" width="141" height="145"></td>
-		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="223" height="0" align="center" valign="top">
-		<b><font face="Times New Roman">Yar Moe M</font></b><span lang="zh-cn"><b><font face="Times New Roman">YINT</font></b></span></td>
+		&nbsp;</td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
@@ -239,65 +235,91 @@ p
 <font size="4"><b>Past members:</b></font></p>
 <ul>
 	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Xin LIU 
-	(Associate </span>Professor, Lappeenranta-Lahti University of Technology 
-	(LUT), Finland)</p></li>
+	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Muzammil 
+	Behzad, </span>AI scientist<span lang="zh-cn">, </span>Silo.AI<span lang="en-us">, Helsinki</span></p></li>
 	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">i 
-	(Assistant Professor of CMVS, Oulu)</span></p></li>
+	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Wei Peng, 
+	Postdoctoral researcher, </span>Stanford University<span lang="zh-cn">, USA</span></p></li>
+	<li>
+	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Zitong 
+	Yu, Postdoctoral researcher, </span>Nanyang Technological University<span lang="zh-cn">, 
+	Singapore</span></p></li>
+	<li>
+	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Xin Liu, Associate </span>Professor, Lappeenranta-Lahti University of Technology 
+	(LUT), Finland</p></li>
+	<li>
+	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">i, Assistant Professor of CMVS, Oulu</span></p></li>
 	<li>
 	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Quang 
-	Nhat V</span>o (AI scientist in Silo.AI<span lang="en-us">, Helsinki</span>)</p></li>
+	Nhat V</span>o<span lang="zh-cn">, </span>AI scientist in Silo.AI<span lang="en-us">, Helsinki</span></p></li>
 	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Yingyue Xu (Zhuhai 
-	Innovation Institute, Fudan University)</p></li>
+	<p class="title" style="line-height: 150%; ">Dr. Yingyue Xu<span lang="zh-cn">,
+	</span>Zhuhai 
+	Innovation Institute, Fudan University</p></li>
 	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Jingang Shi (<span lang="en-us">Associate 
-	Professor of </span>Xi&#39;an Jiaotong University, China)</p></li>
+	<p class="title" style="line-height: 150%; ">Dr. Jingang Shi<span lang="zh-cn">,
+	</span><span lang="en-us">Associate 
+	Professor of </span>Xi&#39;an Jiaotong University, China</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Adj. Prof. Xiaopeng Hong (<span lang="en-us">Professor 
-	of </span>Xi&#39;an Jiaotong University, China)</p></li>
+	<p class="title" style="line-height: 150%">Adj. Prof. Xiaopeng Hong<span lang="zh-cn">,
+	</span><span lang="en-us">Professor 
+	of </span>Xi&#39;an Jiaotong University, China</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Xiaohua Huang (<span lang="en-us">Professor 
-	of </span>Nanjing Institute of Technology, China)</p></li>
+	<p class="title" style="line-height: 150%">Dr. Xiaohua Huang, Professor 
+	of Nanjing Institute of Technology, China</p></li>
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Hamza Zair, Software Engineer<span lang="zh-cn">,
+	</span>Elektrobit (EB), Finland</p></li>
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Radouane Kaddari, Senior 
+	Computer Vision / Deep Learning Engineer, Evercam, Dublin, Ireland</p></li>
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Hao Ban, Xiaomi Finland</p></li>
 	<li>
 	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Bofan Lin</span></p>
 	</li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Mohammad Sabokrou
-	<span lang="en-us">(Associate Professor, Institute for Research in Fundamental Sciences, Iran)</span></p>
+	<p class="title" style="line-height: 150%">Dr. Mohammad Sabokrou<span lang="zh-cn">,
+	</span><span lang="en-us">Associate Professor, Institute for Research in Fundamental Sciences, Iran</span></p>
 	</li>
 	<li>
 	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Jiawei 
-	Zhang (F-Secure Corporation, Helsinki)</span></p></li>
+	Zhang, F-Secure Corporation, Helsinki</span></p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Vili Kellokumpu (<span lang="en-us">VTT</span>, 
-	Finland)</p>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Ms. </span>
+	Niloufar Zebarjadi<span lang="zh-cn">, </span>PhD candidate, Aalto 
+	University</p></li>
+	<li>
+	<p class="title" style="line-height: 150%">Dr. Vili Kellokumpu<span lang="zh-cn">,
+	</span><span lang="en-us">VTT</span>, Finland</p>
 	</li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Mohammad Ghahramani 
-	(Postdoctoral Research Fellow, Ryerson University, Canada)</p></li>
+	<p class="title" style="line-height: 150%">Dr. Mohammad Ghahramani<span lang="zh-cn">,
+	</span>Postdoctoral Research Fellow, Ryerson University, Canada</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Yimo Guo (Siemens healthcare, 
-	USA)</p></li>
+	<p class="title" style="line-height: 150%">Dr. Yimo Guo<span lang="zh-cn">,
+	</span>Siemens healthcare, USA</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Jukka Holappa (Valossa Labs 
-	Oy, Finland)</p></li>
+	<p class="title" style="line-height: 150%">Mr. Jukka Holappa<span lang="zh-cn">,
+	</span>Valossa Labs 
+	Oy, Finland</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Iryna Anina (Bittium Oyj, 
-	Finland)</p></li>
+	<p class="title" style="line-height: 150%">Ms. Iryna Anina<span lang="zh-cn">,
+	</span>Bittium Oyj, Finland</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Devangini Patel (Software 
-	Engineer at Zentron Labs Private Limited, India)</p></li>
+	<p class="title" style="line-height: 150%">Ms. Devangini Patel<span lang="zh-cn">,
+	</span>Software 
+	Engineer at Zentron Labs Private Limited, India</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Niloufar Zebarjadi (Valossa 
-	Labs Oy, Finland) </p></li>
+	<p class="title" style="line-height: 150%">Ms. Niloufar Zebarjadi<span lang="zh-cn">,
+	</span>Valossa 
+	Labs Oy, Finland</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Antti Moilanen (PhD 
-	candidate, Aalto University)</p></li>
+	<p class="title" style="line-height: 150%">Mr. Antti Moilanen<span lang="zh-cn">,
+	</span>PhD candidate, Aalto University</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Matti Taini (Testing Lab, 
-	Finland)</p></li>
+	<p class="title" style="line-height: 150%">Mr. Matti Taini<span lang="zh-cn">,
+	</span>Testing Lab, Finland</p></li>
 </ul>
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
